--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SkyCast AI</title>
+  <title>SkyCast AI | Hyper-Local Weather Intelligence</title>
+  <meta name="description" content="Get hyper-local weather intelligence with SkyCast AI. Featuring real-time forecasts, AI-powered insights, nearby attractions, and historical temporal records.">
+  <meta name="keywords" content="weather, local weather, AI weather, weather forecast, skycast, nearby malls, movie showtimes">
+  <link rel="canonical" href="https://skycast.ai" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://skycast.ai">
+  <meta property="og:title" content="SkyCast AI | Hyper-Local Weather Intelligence">
+  <meta property="og:description" content="AI-powered weather forecasting with real-time local exploration, movie listings, and historical data.">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1592210454359-9043f067919b?auto=format&fit=crop&w=1200&h=630">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://skycast.ai">
+  <meta property="twitter:title" content="SkyCast AI | Hyper-Local Weather Intelligence">
+  <meta property="twitter:description" content="AI-powered weather forecasting with real-time local exploration, movie listings, and historical data.">
+  <meta property="twitter:image" content="https://images.unsplash.com/photo-1592210454359-9043f067919b?auto=format&fit=crop&w=1200&h=630">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -32,11 +51,9 @@
       margin: 0;
       overflow-x: hidden;
       background-color: #000;
-      /* Global smooth transition for theme properties */
       transition: background-color 1s cubic-bezier(0.4, 0, 0.2, 1), color 1s cubic-bezier(0.4, 0, 0.2, 1);
     }
     
-    /* Ensure all text and card elements transition smoothly */
     * {
       transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, backdrop-filter;
       transition-duration: 1000ms;
@@ -109,6 +126,33 @@
       100% { filter: hue-rotate(360deg); }
     }
 
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
+    }
+
+    .animate-float {
+      animation: float 4s ease-in-out infinite;
+    }
+
+    @keyframes bolt-flicker {
+      0%, 100% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.7; transform: scale(1.1); filter: brightness(1.5); }
+    }
+
+    .animate-bolt {
+      animation: bolt-flicker 0.8s ease-in-out infinite;
+    }
+
+    @keyframes slow-spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+
+    .animate-slow-spin {
+      animation: slow-spin 12s linear infinite;
+    }
+
     .light body { background-color: #f8fafc; }
     .dark body { background-color: #0f172a; }
     .midnight body { background-color: #000; }
@@ -131,6 +175,16 @@
 <body class="min-h-screen">
   <div class="grain"></div>
   <div id="root"></div>
+  <script id="structured-data" type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "SkyCast AI",
+      "applicationCategory": "WeatherApplication",
+      "description": "Hyper-local weather forecasts with AI insights, movies, and nearby places.",
+      "operatingSystem": "Web"
+    }
+  </script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
