--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -158,19 +157,24 @@
     .midnight body { background-color: #000; }
   </style>
   <script type="importmap">
-  {
-    "imports": {
-      "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-      "react/": "https://esm.sh/react@^19.2.4/",
-      "react": "https://esm.sh/react@^19.2.4",
-      "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
-      "recharts": "https://esm.sh/recharts@^3.7.0"
-    }
+{
+  "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.40.0",
+    "recharts": "https://esm.sh/recharts@3.7.0?external=react,react-dom",
+    "@vercel/analytics/react": "https://esm.sh/@vercel/analytics@1.6.1/react?external=react",
+    "@vercel/analytics/": "https://esm.sh/@vercel/analytics@^1.6.1/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
-  </script>
-<link rel="stylesheet" href="/index.css">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5578144857476468"
+}
+</script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5578144857476468"
      crossorigin="anonymous"></script>
+
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="min-h-screen">
   <div class="grain"></div>
