--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SkyCast AI | Hyper-Local Weather Intelligence</title>
-  <meta name="description" content="Get hyper-local weather intelligence with SkyCast AI. Featuring real-time forecasts, AI-powered insights, nearby attractions, and historical temporal records.">
-  <meta name="keywords" content="weather, local weather, AI weather, weather forecast, skycast, nearby malls, movie showtimes">
+  <title>SkyCast AI | Real-Time Weather Forecast & AI Insights</title>
+  <meta name="description" content="Get hyper-local weather intelligence with SkyCast AI. Featuring real-time forecasts, AI-powered insights, dynamic wind compass, and 7-day atmospheric delta tracking.">
+  <meta name="keywords" content="weather forecast, local weather, AI weather insights, real-time weather, wind direction compass, uv index, temperature tracker, hyper-local weather">
+  <meta name="author" content="SkyCast AI">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#3b82f6">
   <link rel="canonical" href="https://skycast.ai" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://skycast.ai">
   <meta property="og:title" content="SkyCast AI | Hyper-Local Weather Intelligence">
-  <meta property="og:description" content="AI-powered weather forecasting with real-time local exploration, movie listings, and historical data.">
+  <meta property="og:description" content="Advanced AI-powered weather forecasting with real-time local telemetry, dynamic compass, and 7-day atmospheric tracking.">
   <meta property="og:image" content="https://images.unsplash.com/photo-1592210454359-9043f067919b?auto=format&fit=crop&w=1200&h=630">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://skycast.ai">
   <meta property="twitter:title" content="SkyCast AI | Hyper-Local Weather Intelligence">
-  <meta property="twitter:description" content="AI-powered weather forecasting with real-time local exploration, movie listings, and historical data.">
+  <meta property="twitter:description" content="Advanced AI-powered weather forecasting with real-time local telemetry, dynamic compass, and 7-day atmospheric tracking.">
   <meta property="twitter:image" content="https://images.unsplash.com/photo-1592210454359-9043f067919b?auto=format&fit=crop&w=1200&h=630">
 
   <script src="https://cdn.tailwindcss.com"></script>
@@ -174,6 +177,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5578144857476468"
      crossorigin="anonymous"></script>
 
+
 <link rel="stylesheet" href="/index.css">
 </head>
 <body class="min-h-screen">
@@ -184,9 +188,22 @@
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "SkyCast AI",
+      "url": "https://skycast.ai",
       "applicationCategory": "WeatherApplication",
-      "description": "Hyper-local weather forecasts with AI insights, movies, and nearby places.",
-      "operatingSystem": "Web"
+      "description": "Hyper-local weather forecasts with real-time AI-powered insights and 7-day atmospheric telemetry.",
+      "operatingSystem": "Web",
+      "featureList": [
+        "Real-time Weather Telemetry",
+        "AI Weather Analysis",
+        "Dynamic Wind Compass",
+        "7-Day Weather Forecast",
+        "24-Hour Atmospheric Delta"
+      ],
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
     }
   </script>
 <script type="module" src="/index.tsx"></script>
