--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SkyCast AI | Real-Time Weather Forecast & AI Insights</title>
-  <meta name="description" content="Get hyper-local weather intelligence with SkyCast AI. Featuring real-time forecasts, AI-powered insights, dynamic wind compass, and 7-day atmospheric delta tracking.">
+  <title>RZeal Solutions LLC | Real-Time Weather Forecast & AI Insights</title>
+  <meta name="description" content="Get hyper-local weather intelligence with RZeal Solutions LLC. Featuring real-time forecasts, AI-powered insights, dynamic wind compass, and 7-day atmospheric delta tracking.">
   <meta name="keywords" content="weather forecast, local weather, AI weather insights, real-time weather, wind direction compass, uv index, temperature tracker, hyper-local weather">
-  <meta name="author" content="SkyCast AI">
+  <meta name="author" content="RZeal Solutions LLC">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#3b82f6">
-  <link rel="canonical" href="https://skycast.ai" />
+  <link rel="canonical" href="https://rzealsolutions.com" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://skycast.ai">
-  <meta property="og:title" content="SkyCast AI | Hyper-Local Weather Intelligence">
+  <meta property="og:url" content="https://rzealsolutions.com">
+  <meta property="og:title" content="RZeal Solutions LLC | Hyper-Local Weather Intelligence">
   <meta property="og:description" content="Advanced AI-powered weather forecasting with real-time local telemetry, dynamic compass, and 7-day atmospheric tracking.">
   <meta property="og:image" content="https://images.unsplash.com/photo-1592210454359-9043f067919b?auto=format&fit=crop&w=1200&h=630">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://skycast.ai">
-  <meta property="twitter:title" content="SkyCast AI | Hyper-Local Weather Intelligence">
+  <meta property="twitter:url" content="https://rzealsolutions.com">
+  <meta property="twitter:title" content="RZeal Solutions LLC | Hyper-Local Weather Intelligence">
   <meta property="twitter:description" content="Advanced AI-powered weather forecasting with real-time local telemetry, dynamic compass, and 7-day atmospheric tracking.">
   <meta property="twitter:image" content="https://images.unsplash.com/photo-1592210454359-9043f067919b?auto=format&fit=crop&w=1200&h=630">
 
@@ -183,8 +184,8 @@
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "SkyCast AI",
-      "url": "https://skycast.ai",
+      "name": "RZeal Solutions LLC",
+      "url": "https://rzealsolutions.com",
       "applicationCategory": "WeatherApplication",
       "description": "Hyper-local weather forecasts with real-time AI-powered insights and 7-day atmospheric telemetry.",
       "operatingSystem": "Web",
